--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY_ID=AKIATBD74CLDGLTDRAGK
-AWS_SECRET_ACCESS_KEY=rXV3oxGjtpV4h1ICinH2KE3BjgxK11uxJwO0koWH
+AWS_ACCESS_KEY_ID=XXX
+AWS_SECRET_ACCESS_KEY=XXX
